--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postbuild": "cp public/_redirects build/_redirects",
-    "analyze": "npm run build && npx serve -s build"
+    "analyze": "npm run build && npx serve -s build",
+    "serve": "npx serve -s build -l $PORT"
   },
   "eslintConfig": {
     "extends": [
