abm de member  y usuarios ok

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gym-management-frontend",
+  "name": "demonio-gym-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
